# sb-pyorbbecsdk

./: MANIFEST.in  README.md  package.xml  pyproject.toml  setup.py  setup_old.py
docs/: README.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_sources/source/2_installation/: build_the_package.md.txt  install_the_package.md.txt
docs/_sources/source/4_Application_Guide/: ApplicationGuide.md.txt
docs/source/: license.html
docs/source/1_overview/: Introduction.html  OrbbecSDK_Overview.html  overview.html
docs/source/2_installation/: build_the_package.html  install_the_package.html  installation.html  registration_script.html
docs/source/3_QuickStarts/: QuickStart.html  QuickStarts.html
docs/source/4_Application_Guide/: ApplicationGuide.html  Application_Guide.html
docs/source/5_FAQ/: FAQ.html
src/pyorbbecsdk/: context.cpp  context.hpp  device.cpp  properties.cpp
stubs/: pyorbbecsdk.pyi
